--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/jetstream": "^5.1",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "tinymce/tinymce": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
