--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^41.4.2",
         "tinymce": "^7.1.1"
     }
 }
