--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^41.4.2",
-        "tinymce": "^7.1.1"
+        "tinymce": "^7.1.1",
+        "tw-elements": "^2.0.0"
     }
 }
