--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.3.3"
+    },
+    "dependencies": {
+        "ckeditor5": "^42.0.1"
     }
 }
