--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "artesaos/seotools": "^1.3",
         "cviebrock/eloquent-sluggable": "^11.0",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.1",
